:art: date format improved :sparkles: info-card animation :bug: Safari gap support

--- a/_footer.scss
+++ b/_footer.scss
@@ -5,7 +5,7 @@
 
   &__copyright {
     font-family: $font-text;
-    color: $color-dark-lighter;
+    color: $color-dark-lighter-s;
     margin: 0.5em 0;
   }
 
