--- a/_info.scss
+++ b/_info.scss
@@ -13,7 +13,6 @@
 
   a {
     font-family: $font-headings;
-    display: inline-block;
   }
 }
 
@@ -28,23 +27,25 @@
 }
 
 .card-container {
-  display: flex;
-  flex-wrap: wrap;
-  column-gap: 20px;
-  row-gap: 30px;
+  display: grid; // would be easier with flexbox but Safari doesn't support flexbox gap
+  grid-template-columns: repeat(auto-fit, minmax(auto, 280px));
+  gap: 30px 20px;
   justify-content: center;
   margin-top: 15px;
 }
 
 .card {
   padding: 10px;
-  width: 100%;
-  max-width: 280px;
   border-radius: 5px;
   box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.2);
   display: flex;
   flex-direction: column;
   align-items: center;
+  animation: transform 0.5;
+
+  &:hover {
+    transform: scale(1.05);
+  }
 
   &__logo {
     margin: 10px;
