--- a/_variables-mixins.scss
+++ b/_variables-mixins.scss
@@ -4,7 +4,7 @@ $font-text: 'Roboto', sans-serif;
 $color-dark: rgb(61, 61, 61);
 $color-dark-lighter-s: rgb(67, 67, 67);
 $color-dark-lighter-m: rgb(99, 99, 99);
-$color-dard-lighter-l: rgb(107, 107, 107);
+$color-dark-lighter-l: rgb(107, 107, 107);
 $color-yellow: rgb(255, 189, 22);
 $color-green: rgba(36, 175, 161, 0.66);
 $color-green-darker: rgb(36, 175, 161);
