--- a/styles.css
+++ b/styles.css
@@ -123,14 +123,19 @@ body {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    gap: 40px;
     border-radius: 0px;
     font-size: 21px;
+  }
+  .nav-bar__item {
+    padding: 0;
+  }
+  .nav-bar__item:first-child {
+    margin-right: 60px;
   }
 }
 
 .hero {
-  color: #ffffff;
+  color: white;
   font-family: "Oswald", sans-serif;
   font-weight: 700;
   line-height: 1.5;
@@ -209,8 +214,7 @@ body {
   }
   .hero-img__heading {
     font-size: 4em;
-    margin-top: 0;
-    margin-bottom: 1.2em;
+    margin: 0 0 1.2em 0;
   }
   .hero-img__circle:after {
     width: 180px;
@@ -250,7 +254,7 @@ body {
 }
 
 .counter::after {
-  content: ' ';
+  content: '';
   border-radius: 50%;
   position: absolute;
   top: -12px;
@@ -266,8 +270,8 @@ body {
 }
 
 .counter__number {
-  font-size: 2em;
   margin: 0;
+  font-size: 2em;
 }
 
 .counter__date {
@@ -299,8 +303,8 @@ body {
     font-size: 3em;
   }
   .counter__title {
-    right: -190px;
     top: 180px;
+    right: -190px;
   }
 }
 
@@ -320,7 +324,6 @@ body {
 
 .info a {
   font-family: "Oswald", sans-serif;
-  display: inline-block;
 }
 
 @media screen and (min-width: 768px) {
@@ -333,14 +336,11 @@ body {
 }
 
 .card-container {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  -webkit-column-gap: 20px;
-          column-gap: 20px;
-  row-gap: 30px;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (minmax(auto, 280px))[auto-fit];
+      grid-template-columns: repeat(auto-fit, minmax(auto, 280px));
+  gap: 30px 20px;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
@@ -349,8 +349,6 @@ body {
 
 .card {
   padding: 10px;
-  width: 100%;
-  max-width: 280px;
   border-radius: 5px;
   -webkit-box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.2);
           box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.2);
@@ -364,6 +362,13 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -webkit-animation: transform 0.5;
+          animation: transform 0.5;
+}
+
+.card:hover {
+  -webkit-transform: scale(1.05);
+          transform: scale(1.05);
 }
 
 .card__logo {
@@ -407,14 +412,14 @@ body {
 }
 
 .footer {
-  font-family: "Roboto", sans-serif;
-  color: #434343;
   line-height: 1.5;
   text-align: center;
   padding: 16px 20px;
 }
 
 .footer__copyright {
+  font-family: "Roboto", sans-serif;
+  color: #434343;
   margin: 0.5em 0;
 }
 
